<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/deviations_viewer_action_favorite"
        android:checkable="true"
        android:icon="@drawable/ic_favorite_unchecked_24dp"
        android:title="@string/deviations_viewer_action_add_to_favorites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/deviations_viewer_action_download"
        android:title="@string/deviations_viewer_action_download"
        app:showAsAction="never" />

    <item
        android:id="@+id/deviations_viewer_action_open_in_browser"
        android:title="@string/deviations_viewer_action_open_in_browser"
        app:showAsAction="never" />

    <item
        android:id="@+id/deviations_viewer_action_copy_link"
        android:title="@string/deviations_viewer_action_copy_link"
        app:showAsAction="never" />

</menu>
